substrate/frame/support/test/tests/pallet_ui/trait_constant_invalid_bound.stderr
error: Invalid usage of `#[pallet::constant]`: `Get<T>` trait bound not found. Either add a `Get<T>` bound or use `#[pallet::constant(::path)]` to specify the value path.
  --> tests/pallet_ui/trait_constant_invalid_bound.rs:26:3
   |
26 |         type U;
   |         ^^^^
